Fixed Dashboard/Matches on IE8

--- a/app/assets/stylesheets/dashboard.css.less
+++ b/app/assets/stylesheets/dashboard.css.less
@@ -31,6 +31,10 @@
     }
   }
 
+  .nav-tabs {
+    max-width: 390px;
+  }
+
   .tab-content {
     overflow:hidden;
   }
@@ -62,7 +66,7 @@
       padding: 4px 8px;
       font-size: 125%;
       height: (@baseFontSize * 1.25 * @baseLineHeight) + 4px * 2 ;
-      max-width: 390px;
+      max-width: 350px;
       margin: 14px 17px 8px 23px;
       box-shadow: none;
 
